feat:update hendler, update trackvideo logic, test client, up models
